--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install .
+        orfipy -h
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
