--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - getorf -h
   - getorf -find 3 -outseq ec3.fa -sequence tests/testseq/ecoli.fa -min 12
   - getorf -find 2 -outseq ec.fa -sequence tests/testseq/ecoli.fa -min 12
-  - orfipy --partial-3 --start ATG --min 12 --outdir ofout --dna d3 tests/testseq/ecoli.fa
+  - orfipy --partial-3 --min 12 --outdir ofout --dna d3 tests/testseq/ecoli.fa
   - orfipy --between-stops --min 12 --outdir ofout --dna d tests/testseq/ecoli.fa
   - python scripts/compare_fasta_files.py ec3.fa ofout/d3
   - python scripts/compare_fasta_files.py ec.fa ofout/d
