--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,15 @@ script:
   - orfipy --single --min 120 --outdir ofout --dna d --pep p tests/testseq/ecoli.fa --include-stop --partial-3 --partial-5
   - orfipy --single --min 120 --outdir ofout --dna d --pep p tests/testseq/ecoli.fa --include-stop --partial-5
   - orfipy --single --min 120 --outdir ofout --dna d --pep p tests/testseq/ecoli.fa --include-stop --partial-5 --start ACG --stop TGC
+  #test gzipped
+  - gzip tests/testseq/ecoli.fa
+  - orfipy --single --partial-3 --start ATG --min 120 --outdir ofout --dna d3 --pep p3 tests/testseq/ecoli.fa.gz
+  - orfipy --single --between-stops --min 120 --outdir ofout --dna d --pep p tests/testseq/ecoli.fa.gz
+  - python scripts/compare_fasta_files.py ec3.fa ofout/d3
+  - python scripts/compare_fasta_files.py ecp3.fa ofout/p3
+  - python scripts/compare_fasta_files.py ec.fa ofout/d
+  - python scripts/compare_fasta_files.py ecp.fa ofout/p
+
   #see logs
   - cat ofout/*.log
   #- coverage run -m pytest tests/
